--- a/Tests/MathCore.WPF.Styles.WPFTests/MathCore.WPF.Styles.WPFTests.csproj
+++ b/Tests/MathCore.WPF.Styles.WPFTests/MathCore.WPF.Styles.WPFTests.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\MathCore.WPF.Styles\MathCore.WPF.Styles.csproj" />
+  </ItemGroup>
+
 </Project>
